<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item
        android:id="@+id/action_searchable_activity"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search"
        android:title="@string/action_searchable_activity"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_second_activity"
        android:orderInCategory="100"
        android:title="@string/action_second_activity"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_transition_activity"
        android:orderInCategory="100"
        android:title="@string/action_transition_activity"
        app:showAsAction="never" />

    <!--  -->
</menu>
